--- a/Ahorcado2/ahorcado2.client/src/App.css
+++ b/Ahorcado2/ahorcado2.client/src/App.css
@@ -46,4 +46,40 @@ th, td {
     backgroundColor: LetrasEscogidas[letra] === "correcta" ? "green" : LetrasEscogidas[letra] === "incorrecta" ? "red" : "white", color: "black",
 }
 
+.modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: brown;
+}
+
+.modal-content {
+    background-color: saddlebrown;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    max-height: 80%;
+    overflow-y: auto;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.modal-content ul {
+    padding-left: 20px;
+}
+
+.modal-content li {
+    margin-bottom: 10px;
+}
 
